tests/negative/typecheck/identifier.orng
fn main() -> Int {
    let x = 0.4
    x
}